--- a/src/Security/Templates/registration/register.html.twig
+++ b/src/Security/Templates/registration/register.html.twig
@@ -143,7 +143,7 @@
 
                             <!-- Terms checkbox -->
                             <div class="mb-4">
-                                <div class="registration-agree-terms form-check">
+                                <div class="auth-checkbox form-check">
                                     {{ form_widget(registrationForm.agreeTerms, {
                                         'attr': {
                                             'class': 'form-check-input rounded-2'
