Add information about link expiration time

--- a/src/Mailer/Templates/account_confirmation/account_confirmation_email_pl.html.twig
+++ b/src/Mailer/Templates/account_confirmation/account_confirmation_email_pl.html.twig
@@ -93,6 +93,10 @@
                         <p style="font-size:15px;line-height:1.6;color:#d6dbe3;margin:0 0 24px 0;">
                             Kliknij przycisk poniżej, aby aktywować swoje konto i rozpocząć tworzenie własnych scenariuszy wyścigowych.
                         </p>
+
+                        <p style="font-size:15px;line-height:1.6;color:#d6dbe3;margin:0 0 24px 0;">
+                            Link wygaśnie w ciągu {{ expiresInMinutes }} minut.
+                        </p>
                     </td>
                 </tr>
                 <tr>
