--- a/src/Mailer/Templates/account_confirmation/account_confirmation_email_pl.txt.twig
+++ b/src/Mailer/Templates/account_confirmation/account_confirmation_email_pl.txt.twig
@@ -11,6 +11,8 @@ Zanim wyruszysz na tor, musimy potwierdzić Twój adres email.
 
 Kliknij poniższy link, aby aktywować swoje konto i rozpocząć tworzenie własnych scenariuszy wyścigowych:
 
+Link wygaśnie w ciągu {{ expiresInMinutes }} minut.
+
 {{ verificationUrl }}
 
 Jeśli to nie Ty zakładałeś konto, po prostu zignoruj tę wiadomość.
